# yavai-python

./: .env  .env.example  .gitigonre  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_config.py
tests/test_connections/: test_jdbc.py  test_sftp.py
tests/test_datasets/: test_api.py  test_client.py
tests/test_io/: test_media.py  test_readers.py  test_utils.py
tests/test_tracking/: test_mlflow_wrapper.py
tests/test_utils/: test_package_manager.py
yavai/: __init__.py  _context.py  config.py
yavai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yavai/connections/: jdbc.py  sftp.py
yavai/datasets/: api.py  client.py
yavai/io/: media.py  readers.py  utils.py
yavai/tracking/: mlflow_wrapper.py
yavai/utils/: package_manager.py
